
* Upgraded to Uncommons Maths 1.2, which has its own Probability type, so we
  now use that and the Probability class in the framework package has been
  removed.

* Removed call to System.out.println in ConcurrentEvolutionEngine (ISSUE#12).

* Included source code in the release distribution in the form of source JARs
  for the framework and swing modules (source code for the examples module is
  already included) (ISSUE#11). 


Changes in version 0.5.1
------------------------

* Simplified generics for EvolutionaryOperators.  It's now slightly less
  flexible but the most common scenarios are less cumbersome since there are
  no 'super' wildcards to deal with when constructing pipelines and no need to
  deal with sub-types when implementing your own operators.

* Added generic type parameters to ListCrossover, ListOrderCrossover and
  ListOrderMutation to be compatible with the above change.

* Added evolutionary art example appliction inspired by Roger Alsing's
  evolution of the Mona Lisa, see
  http://rogeralsing.com/2008/12/07/genetic-programming-evolution-of-mona-lisa/

* Added Replacement evolutionary operator that randomly replaces candidates
  with independent, newly-generated random candidates.  Useful for introducing
  new genetic material into stagnating populations.

* Improved ListCrossover operator so that it can work with parents of variable
  lengths.

* Added higher-order evolutionary operator, ListOperator that converts an
  operator of a given type into a operator that works with lists of that type.

* Enhancements to the Evolution Monitor component.


Changes in version 0.5.0
------------------------

* Added wildcard to generic parameter of Console select method.

* Added check to ensure that there is always at least one termination condition
  specified.

* Improved reflection in RendererAdapter and InteractiveSelection.  Previously
  they tried to access classes that may not have been visible to them.
