@@ -124,9 +124,7 @@
   <target name="framework"
           description="Build the framework module.">
     <uncommons:compile module="framework" />
-    <uncommons:jar module="framework"
-                   jarfile="${artifact.identifier}.jar"
-                   classpath="uncommons-maths-1.2.jar google-collect-1.0-rc1.jar" />
+    <uncommons:jar module="framework" jarfile="${artifact.identifier}.jar" />
   </target>
 
 
@@ -135,9 +133,7 @@
           depends="framework"
           description="Build the GUI module.">
     <uncommons:compile module="swing" />
-    <uncommons:jar module="swing"
-                   jarfile="watchmaker-swing-${version}.jar"
-                   classpath="${artifact.identifier}.jar uncommons-maths-1.2.jar jfreechart-1.0.13.jar jcommon-1.0.16.jar" />
+    <uncommons:jar module="swing" jarfile="watchmaker-swing-${version}.jar" />
   </target>
 
 
@@ -146,9 +142,7 @@
           depends="framework, swing"
           description="Build the examples.">
     <uncommons:compile module="examples" />
-    <uncommons:jar module="examples"
-                   jarfile="watchmaker-examples-${version}.jar"
-                   classpath="${artifact.identifier}.jar uncommons-maths-1.2.jar watchmaker-swing-${version}.jar">
+    <uncommons:jar module="examples" jarfile="watchmaker-examples-${version}.jar">
       <additionalcontents>
         <fileset dir="${modules.dir}/examples/resources" includes="**/*" />
       </additionalcontents>
